<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="2dip" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/result_title"
                android:layout_width="240dip"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dip"
                android:shadowColor="@color/white"
                android:shadowRadius="3.0"
                android:text="@string/text_result"
                android:textColor="@color/blue"
                android:textSize="24sp"
                android:textStyle="bold" >
            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/statistic_label"
                    android:layout_width="120dip"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="ResultLabel"
                    android:textColor="@color/yellow"
                    android:textSize="18sp">
                </TextView>

                <TextView
                    android:id="@+id/statistic_content"
                    android:layout_width="120dip"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="Statistics"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" >
                </TextView>
            </LinearLayout>

            <TextView
                android:id="@+id/result_new_record"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_new_record"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20sp" >
            </TextView>

            <TextView
                android:id="@+id/result_new_achievement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_new_achievement"
                android:textColor="@color/yellow"
                android:textStyle="bold"
                android:textSize="20sp" >
            </TextView>

            <LinearLayout
                android:id="@+id/record_achievement_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal" >
            </LinearLayout>
            
            <Button
                android:id="@+id/button_restart"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dip"
                android:onClick="onClick"
                android:text="@string/button_restart" >
            </Button>
        </LinearLayout>
    </ScrollView>

</LinearLayout>